# Media

./: .gitignore  CMakeLists.txt  main.cpp
app/: Soundplayer.cpp  Soundplayer.h  hello.cpp  hello.h
include/: MediaPlayer.h  commands.h
src/: MediaPlayer.cpp  commands.cpp
